recursion.lessons.recursion.tree.Tree.scala.error
Tree:7: error: type mismatch;
 found   : Double
 required: Int
	current(shrink)
                ^